css/ubcatclub.css
/* ... */
/**
 * casting
 */
.cc-casting {
	background-color:#ff8672;
	padding:0;
	height:100%;
}
.cc-casting .content {
	margin:0;
}
.cc-casting .content .callout {
	position:absolute;
	top:40%;
	width:100%;
	z-index:2;
}
.cc-casting .content .callout p {
	width:20em;
	margin:0 auto;
	font-size:4em;
	color:#ff8672;
	text-align:center;
}
.cc-casting .content .callout p a {
	color:#ff8672;
}
.cc-casting .content .callout p a:hover {
	color:#333;
}
.cc-casting iframe {
	position:absolute;
	top:1em;
	z-index:1;
}

/**
 * archive
 */
.cc-archive {
	background-color:#ff8672;;
	padding:4em 10em;
}
.cc-archive .content {
	width:83em;
	overflow:hidden;
}
/**
 * ul.contentList.archiveList
 */
ul.archiveList {
/*	overflow:hidden;
*/}

ul.archiveList li.story {
	padding:0 2em 4em 0;
	float:left;
}
/**
 * archiveStoryList
 */
ul.archiveStoryList {
/*	overflow:hidden;
*/	float:left;
}
ul.archiveStoryList li.item {
	display:none;
}
ul.archiveStoryList li.item article.entry {
	position:relative;
	width:auto;
	cursor:pointer;
}
ul.archiveStoryList li.item article.entry header {
	position:absolute;
	background:#333333;
	width:100%;
	height:100%;
	-webkit-transition:all 0.2s ease-in-out;
	-moz-transition:all 0.2s ease-in-out;
	-o-transition:all 0.2s ease-in-out;
	transition:all 0.2s ease-in-out;
	opacity:0;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
}

ul.archiveStoryList li.item article.entry header h2.title{
	text-align:center;
	position:relative;
	top:45%;
}
ul.archiveStoryList li.item article.entry h2.title a {
	font-size:2em;
	line-height:1em;
	color:#fff;
	text-decoration:none;
	text-transform:uppercase;
}
ul.archiveStoryList li.item article.entry section.content {
	display:none;
}
ul.archiveStoryList li.item article.entry .imgHolder img:hover {
	background:#333333;
}
ul.archiveStoryList li.item article.entry .imgHolder img {
	padding-bottom:0;
}


/*archive slide show*/
.cc-archive .slideShow {
	position:relative;
	margin:0;
	width:60em;
}
.cc-archive .slideShow ul.archiveStoryList  {
	position:relative;
	background-color:#ff8672;
	width:100%;
}
.cc-archive .slideShow ul.archiveStoryList li.item {
	position:absolute;
	padding:0;
	float:none;
	width:80%;
	background-color:#ff8672;
}
.cc-archive .slideShow ul.archiveStoryList li.transitioning {
	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry {
	background-color:#ff8672;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry header {
	overflow:hidden;
	padding-bottom:2em;
	background:#333333;
	display:none;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry h2.title{
	float:left;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry h2.title a{
	font-size:2em;
	line-height:1em;
	color:#fff;
	text-decoration:none;
	text-transform:uppercase;
}
.cc-archive .slideShow a.nextBtn,
.cc-archive .slideShow  a.prevBtn {
	position:absolute;
	width: 1.2em;
	height: 2.4em;
	z-index:10;
	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
	cursor:pointer;
}
.cc-archive .slideShow a.nextBtn {
/*	background: url('../images/cc-btn-next.png') no-repeat scroll top left;
	top:35em;
	left:65em;
*/
	top:0;
	left:0;
	height:100em;
	width:100em;
}
.cc-archive .slideShow a.prevBtn {
	background: url('../images/cc-btn-prev.png') no-repeat scroll top left;
	top:35em;
	left:-5em;
	display:none;
}
.cc-archive .slideShow a.xBtn {
	position:absolute;
	width:4.2em;
	height:4.2em;
	top:0;
	left:65em;
	z-index:10;
	cursor:pointer;
	background: url('../images/cc-btn-x.png') no-repeat scroll top left;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry section.content {
	width:60em;
	margin:0;
	display:block;
	opacity:0;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
}
.cc-archive .slideShow ul.archiveStoryList li.currentSlide article.entry section.content {
	opacity:1;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
}
.cc-archive .slideShow ul.archiveStoryList li article.entry section.content p {
	font-family: Garamond;
	font-style: italic;
	font-weight: normal;
	font-size:2em;
	line-height:1em;
	color:#fff;
	text-decoration:none;
	padding:0;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry section.content p.name {
	font-family:'DrescherGroteskBTW01-Se';
	font-style: normal;
	font-size:2em;
	line-height:1em;
	color:#fff;
	text-decoration:none;
	padding:1.5em 0 1em 0;
}
.cc-archive .slideShow ul.archiveStoryList li article.entry .imgHolder img {
	padding:0;
	width:60em;
	height:auto;
}
.cc-archive .indicator {
	position:absolute;
	top:31.5em;
	left:35em;
	z-index:4;
	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
	display:none;
}

/**
 * cc-subscribe
 */
.cc-subscribe {
	background:#fff;
	height:600px;
	padding:4em 10em;
}
.cc-subscribe .content {
	width:83em;
	overflow:hidden;
}



footer {
	text-align:center;
	background-color:#ff8672;;
	padding:2em 0;
}
footer a {
	display:block;
	background: url('../images/United-Bamboo-logo.png') no-repeat scroll top left;
	text-indent:-9999px;
	width: 15em;
	height: 1.8em;
	margin:0 auto;
}


/**
 * screensaver
 */
.screensaver {
	position:absolute;
	top:0;
	left:0;
	height:100%;
	width:100%;
	z-index:11;
	background:#000;
	background:#000 url('../images/bg-screensaver.gif') repeat scroll 50% 50%;
	
	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
}
/* ... */

